--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,11 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        working-directory: ./frontend
+        working-directory: frontend
         run: npm install
 
       - name: Build project
-        working-directory: ./frontend
+        working-directory: frontend
         run: npm run build
 
       - name: Start SSH agent and add key
