--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,16 +25,19 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Install sshpass
-        run: sudo apt-get update && sudo apt-get install -y sshpass
-
       - name: Start SSH agent and add key
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
         run: |
           eval $(ssh-agent -s)
-          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - <<< "$SSH_PASSPHRASE"
+          echo "$SSH_PRIVATE_KEY" > /tmp/git_id_rsa
+          chmod 600 /tmp/git_id_rsa
+          # Utiliser SSH_ASKPASS pour entrer la passphrase
+          echo "echo $SSH_PASSPHRASE" > /tmp/askpass.sh
+          chmod +x /tmp/askpass.sh
+          export SSH_ASKPASS=/tmp/askpass.sh
+          setsid ssh-add /tmp/git_id_rsa < /dev/null
 
       - name: Copy build to server
         run: |
