--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ name: Deploy Frontend
 on:
   push:
     branches:
-      - master # Déclenche le workflow à chaque fois qu'il y a un push sur la branche "master"
+      - master
 
 jobs:
   build-and-deploy:
@@ -28,18 +28,13 @@ jobs:
       - name: Start SSH agent and add key
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
         run: |
           eval $(ssh-agent -s)
           echo "$SSH_PRIVATE_KEY" > /tmp/git_id_rsa
           chmod 600 /tmp/git_id_rsa
-          # Utiliser SSH_ASKPASS pour entrer la passphrase
-          echo "echo $SSH_PASSPHRASE" > /tmp/askpass.sh
-          chmod +x /tmp/askpass.sh
-          export SSH_ASKPASS=/tmp/askpass.sh
-          setsid ssh-add /tmp/git_id_rsa < /dev/null
+          ssh-add /tmp/git_id_rsa
 
       - name: Copy build to server
         run: |
           ssh-keyscan -H 148.113.194.130 >> ~/.ssh/known_hosts
-          rsync -avz --delete build/ alxmu6848@148.113.194.130:/home/alxmultimedia.com/public_html/build
+          rsync -avz --delete build/ root@148.113.194.130:/home/alxmultimedia.com/public_html/build -e "ssh -p 49645"
