--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,5 +36,7 @@ jobs:
 
       - name: Copy build to server
         run: |
+          mkdir -p ~/.ssh
           ssh-keyscan -H 148.113.194.130 >> ~/.ssh/known_hosts
           rsync -avz --delete build/ root@148.113.194.130:/home/alxmultimedia.com/public_html/build -e "ssh -p 49645"
+
