--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,8 +36,8 @@ jobs:
 
       - name: Copy build to server
         run: |
-          mkdir -p /tmp/.ssh
-          ssh-keyscan -H 148.113.194.130 >> /tmp/.ssh/known_hosts
-          rsync -avz --delete build/ root@148.113.194.130:/home/alxmultimedia.com/public_html/build -e "ssh -p 49645 -o UserKnownHostsFile=/tmp/.ssh/known_hosts"
-
+          mkdir -p /home/runner/.ssh
+          chmod 700 /home/runner/.ssh
+          ssh-keyscan -H 148.113.194.130 >> /home/runner/.ssh/known_hosts
+          rsync -avz --delete build/ root@148.113.194.130:/home/alxmultimedia.com/public_html/build -e "ssh -p 49645"
 
