--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,10 +36,7 @@ jobs:
 
       - name: Copy build to server
         run: |
-          mkdir -p /tmp/.ssh
-          chmod 700 /tmp/.ssh
-          ssh-keyscan -H 148.113.194.130 >> /tmp/.ssh/known_hosts
-          rsync -avz --delete build/ root@148.113.194.130:/home/alxmultimedia.com/public_html/build -e "ssh -p 49645 -o UserKnownHostsFile=/tmp/.ssh/known_hosts"
-
+          ssh-keyscan -H 148.113.194.130 > known_hosts
+          rsync -avz --delete build/ root@148.113.194.130:/home/alxmultimedia.com/public_html/build -e "ssh -p 49645 -o UserKnownHostsFile=known_hosts"
 
 
