modification du deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,4 +39,5 @@ jobs:
           touch known_hosts
           chmod 600 known_hosts
           ssh-keyscan -p 49645 -H 148.113.194.130 >> known_hosts
+          chmod 600 /tmp/git_id_rsa_new
           rsync -avz --delete build/ root@148.113.194.130:/home/alxmultimedia.com/public_html/build -e "ssh -p 49645 -o UserKnownHostsFile=known_hosts -o IdentitiesOnly=yes -i /tmp/git_id_rsa_new"
