--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-#  /home/alxmultimedia.com/frontend/deploy.yml
+# /home/alxmultimedia.com/frontend/deploy.yml
 name: Deploy Frontend
 
 on:
@@ -11,20 +11,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Étape 1 : Checkout du dépôt Git
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Étape 2 : Configuration de Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
+      # Étape 3 : Installation des dépendances
       - name: Install dependencies
         run: npm install
 
+      # Étape 4 : Build du projet
       - name: Build project
         run: npm run build
 
+      # Étape 5 : Ajout de la clé SSH pour se connecter au serveur
       - name: Start SSH agent and add key
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -34,15 +39,21 @@ jobs:
           chmod 600 /tmp/git_id_rsa
           ssh-add /tmp/git_id_rsa
 
+      # Étape 6 : Copier le build sur le serveur
       - name: Copy build to server
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SERVER_IP: ${{ secrets.SERVER_IP }}
+          SSH_PORT: ${{ secrets.SSH_PORT }}
+          DEPLOY_DIRECTORY: ${{ secrets.DEPLOY_DIRECTORY }}
         run: |
           touch known_hosts
           chmod 600 known_hosts
-          ssh-keyscan -p 49645 -H 148.113.194.130 >> known_hosts
+          ssh-keyscan -p $SSH_PORT -H $SERVER_IP >> known_hosts
           
           # Assurez-vous que la clé privée est bien placée et accessible
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > /tmp/git_id_rsa_new
+          echo "$SSH_PRIVATE_KEY" > /tmp/git_id_rsa_new
           chmod 600 /tmp/git_id_rsa_new
 
           # Effectuer la copie vers le serveur
-          rsync -avz --delete build/ root@148.113.194.130:/home/alxmultimedia.com/public_html/build -e "ssh -p 49645 -o UserKnownHostsFile=known_hosts -o IdentitiesOnly=yes -i /tmp/git_id_rsa_new"
+          rsync -avz --delete build/ root@$SERVER_IP:$DEPLOY_DIRECTORY -e "ssh -p $SSH_PORT -o UserKnownHostsFile=known_hosts -o IdentitiesOnly=yes -i /tmp/git_id_rsa_new"
