--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY_DEV }}
         run: |
           eval $(ssh-agent -s)
-          echo "$SSH_PRIVATE_KEY" > /tmp/git_id_rsa
+          echo -e "$SSH_PRIVATE_KEY" > /tmp/git_id_rsa
           chmod 600 /tmp/git_id_rsa
           ssh-add /tmp/git_id_rsa
 
