--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,27 +38,31 @@ jobs:
           echo -e "$SSH_PRIVATE_KEY" > /tmp/git_id_rsa
           chmod 600 /tmp/git_id_rsa
           ssh-add /tmp/git_id_rsa || ssh-add -t 60 /tmp/git_id_rsa
-
-
+            # Étape 6 : Copier le build sur le serveur
+      
       # Étape 6 : Copier le build sur le serveur
       - name: Copy build to server
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY_DEV }}
-          SERVER_IP: ${{ secrets.SERVER_IP_DEV }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SERVER_IP: ${{ secrets.SERVER_IP }}
           SSH_PORT: ${{ secrets.SSH_PORT }}
-          DEPLOY_DIRECTORY: ${{ secrets.DEPLOY_DIRECTORY_DEV }}
+          DEPLOY_DIRECTORY: ${{ secrets.DEPLOY_DIRECTORY }}
         run: |
           touch known_hosts
           chmod 600 known_hosts
-          ssh-keyscan -p $SSH_PORT -H $SERVER_IP >> known_hosts
+          
+          # Correction du ssh-keyscan pour garantir que les variables sont bien utilisées
+          ssh-keyscan -p ${SSH_PORT} -H ${SERVER_IP} >> known_hosts
           
           # Assurez-vous que la clé privée est bien placée et accessible
           echo "$SSH_PRIVATE_KEY" > /tmp/git_id_rsa_new
           chmod 600 /tmp/git_id_rsa_new
 
           # Effectuer la copie vers le serveur
-          rsync -avz --delete build/ root@$SERVER_IP:$DEPLOY_DIRECTORY -e "ssh -p $SSH_PORT -o UserKnownHostsFile=known_hosts -o IdentitiesOnly=yes -i /tmp/git_id_rsa_new"
+          rsync -avz --delete build/ root@${SERVER_IP}:${DEPLOY_DIRECTORY} -e "ssh -p ${SSH_PORT} -o UserKnownHostsFile=known_hosts -o IdentitiesOnly=yes -i /tmp/git_id_rsa_new"
 
+
+      
       # Étape 7 : Redémarrer le conteneur Docker du frontend sur le serveur dev
       - name: Restart Frontend Container
         env:
