Mise à jour du script de dev

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,6 +71,9 @@ jobs:
           SSH_PORT: ${{ secrets.SSH_PORT }}
         run: |
           ssh -p $SSH_PORT -o UserKnownHostsFile=known_hosts -o IdentitiesOnly=yes -i /tmp/git_id_rsa_new root@$SERVER_IP "
+          if [ -z \"$DEPLOY_DIRECTORY\" ]; then
+            echo 'DEPLOY_DIRECTORY is not set' && exit 1;
+          fi &&
           docker stop front_dev || true &&
           docker rm front_dev || true &&
           docker run -d --name front_dev -p 3001:80 -v $DEPLOY_DIRECTORY:/usr/share/nginx/html nginx:alpine
