--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "frontend"]
 	path = frontend
 	url = https://github.com/Alcar81/front_prod.git
+	branch = master
 [submodule "backend"]
 	path = backend
 	url = https://github.com/Alcar81/alx_back.git
+	 branch = master
